--- a/procfile
+++ b/procfile
@@ -1,4 +1,4 @@
 web: java
 -Dspring.profiles.active=dev
 -Dserver.port=$PORT $JAVA_OPTS
--jar target/student-app-0.0.1-SNAPSHOT.jar
+-jar target/Lupa-PW-0.0.1-SNAPSHOT.jar
